
VERSION 0.x.xx
DATE xx/xx/201x
48th Alpha Release

NEWS:

NEW: [features/improvements]
+Major performance improvements to Replace All action
+Backup file suffix can be customized (patch from dkuhlman)
+Moderate improvements to performance of working with large files.
+Improved support for R programming language.
+SingleInstanceChecker temp file moved from home directory to system temp directory.

LIBRARY:
+Add InfoBar control for providing simple information messages without having to
show a modal dialog.

BUG FIXES:
+Fix minor control sizing issue in ControlBars created by ControlBox.CreateControlBar
on GTK/MSW.
+Fix issue with Unicode normalization in search.
+Fix in buffer search operations to work better for Unicode by working around
issues where StyledTextCtrl expects UTF-8 byte offsets for some methods (SetSelection,
GetSelection, ...)
+Fix saved search flags not being propagated properly after application restart.
+Fix Calltip shortcut not working correctly due to incorrect lookup string being
sent down to completer when character to left of cursor was a paren.
+Fix bug that could result in data loss when saving a file when all encodings
failed.
+Fix MemoryError that could occur when saving large files.
+Fix some UTF-16 handling issues on Linux.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.89
DATE 12/17/2011
47th Alpha Release

NEWS:

This release adds support for highlighting some new file types and some minor
improvements to the auto-completions support. The Python auto-completion has been
improved to better handle updating when external modules that are analyzed
from import statements have changed during runtime as well as improvements to
the handling of properties and member attributes.

In addition to the features listed above there has been some library and 
framework enhancements to help support future plugin development.
