@@ -53,10 +53,11 @@ _DEFAULTS = {
            'AUTO_RELOAD' : False,           # Automatically reload files?
            'BRACKETHL'  : True,             # Use bracket highlighting
            'BSUNINDENT' : True,             # Backspace Unindents
-           'CTRLBAR'    : dict(),           # ControlBar layouts
+           'CARETWIDTH' : 1,                # Preferred cursor width
            'CHECKMOD'   : True,             # Auto check file for file mod
            'CHECKUPDATE': True,             # Check for updates on start
            'CODE_FOLD'  : True,             # Use code folding
+           'CTRLBAR'    : dict(),           # ControlBar layouts
            'DEFAULT_LEX': 'Plain Text',     # Default lexer for new documents
            'DEFAULT'    : False,            # No longer used I believe
            'DEFAULT_VIEW' : 'Automatic',    # Default Perspective
